# skelpy

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  __main__.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
_modules/: index.html
_modules/skelpy/: main.html  makers.html  templates.html
_modules/skelpy/makers/: base.html  docs.html  license.html  license_change.html  package.html  project.html  readme.html  setup.html  setup_cfg.html  tests.html
_modules/skelpy/utils/: defaultsubparse.html  helpers.html  logger.html  opener.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt  skelpy.makers.rst.txt  skelpy.rst.txt  skelpy.templates.rst.txt  skelpy.utils.rst.txt
api/: modules.html  skelpy.html  skelpy.makers.html  skelpy.templates.html  skelpy.utils.html
docs/: Makefile  conf.py  index.rst  make.bat
skelpy/: main.py
skelpy/makers/: __init__.py  base.py  docs.py  license.py  license_change.py  package.py  project.py  setup.py  setup_cfg.py  tests.py
skelpy/templates/: __init__.py  info.tpl  sphinx_conf.tpl  test_init.tpl  test_main_pytest.tpl  test_main_unittest.tpl
skelpy/utils/: __init__.py  helpers.py  opener.py
tests/: __init__.py  test_base.py  test_docs.py  test_helpers.py  test_license.py  test_license_change.py  test_logger.py  test_main.py  test_makers.py  test_opener.py  test_package.py  test_project.py  test_readme.py  test_setup.py  test_setup_cfg.py  test_template.py  test_test.py
tests/test_data/: sample_setup.cfg
