[metadata]
name = skelpy
version = 1.0.pre
author = dks
author_email = june3474@gmail.com
description = simple template tool to create the skeleton of a python project
long-description = file: README.rst
url = https://github.com/dks/skelpy
license = MIT
platforms = any
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
	= .
install_requires =
setup_requires = pytest-runner
tests_require = pytest

[options.package_data]
skelpy.templates = *.tpl

[options.extras_require]

[options.packages.find]
where = .
exclude =
    docs
    tests
    tests.*

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload
test = pytest

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build
